[tool.poetry]
name = "flan-rlhf"
version = "0.1.0"
description = "Finetuning FLAN model using Reinforcement Learning Through Human Feedback (RLHF)"
authors = ["Saiteja Utpala <saitejautpala@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
transformers = "^4.26.1"
torch = "^1.13.1"

[tool.poetry.dev-dependencies]
pre-commit = "^2.16.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
